rewrite charm logic